--- a/src/styles.css
+++ b/src/styles.css
@@ -10,8 +10,25 @@ body {
   background-color: lightblue;
 }
 
+.clipButton {
+  border: none;
+  background: transparent;
+  text-align: center;
+  width: fit-content;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid rgb(199, 199, 199);
+  border-radius: 6px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 600px) {
   .App {
+    height: fit-content;
+    margin-top: 20%;
+  }
+  .card {
     width: 90%;
     margin: auto;
   }
